--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "nanoid": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "5.3.0"
+    "react-router-dom": "5.3.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "@vitejs/plugin-react": "^1.3.2",
